--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ plugins {
 android {
     signingConfigs {
         debug {
-            storeFile file('C:\\Users\\fedor\\.android\\debug.keystore')
+            storeFile file('C:\\Users\\Owner\\.android\\debug.keystore')
             storePassword 'android'
             keyPassword 'android'
             keyAlias 'androiddebugkey'
@@ -87,6 +87,9 @@ dependencies {
     // When using the BoM, you don't specify versions in Firebase library dependencies
     implementation 'com.google.firebase:firebase-crashlytics'
     implementation 'com.google.firebase:firebase-analytics'
+
+    //web3js Ethereum plugin
+    implementation 'org.web3j:core:4.1.0-android'
 
 
 }
