--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,5 +91,10 @@ dependencies {
     //web3js Ethereum plugin
     implementation 'org.web3j:core:4.5.6'
 
+    // https://mvnrepository.com/artifact/xerces/xercesImpl
+    implementation group: 'xerces', name: 'xercesImpl', version: '2.12.0'
+
+
+
 
 }
