--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id("com.apollographql.apollo3").version("3.2.1")
 }
 
 android {
@@ -88,5 +89,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-crashlytics'
     implementation 'com.google.firebase:firebase-analytics'
 
+    implementation("com.apollographql.apollo3:apollo-runtime:3.2.1")
+}
 
+apollo {
+    packageName.set("com.mednote.cwru")
 }
