--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:usesCleartextTraffic="true"
         android:theme="@style/Theme.MedNote">
         <activity
-            android:name=".LogInActivity"
+            android:name=".IntroActivity"
             android:exported="true"
             android:theme="@style/Theme.MedNote.NoActionBar">
             <intent-filter>
