Added Login Activity stub

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,11 +13,20 @@
         android:usesCleartextTraffic="true"
         android:theme="@style/Theme.MedNote">
         <activity
+            android:name=".MainActivity"
+            android:exported="true"
+            android:theme="@style/Theme.MedNote.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".IntroActivity"
             android:exported="true"
             android:theme="@style/Theme.MedNote.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
@@ -28,8 +37,6 @@
             android:theme="@style/Theme.MedNote.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
@@ -38,8 +45,6 @@
             android:theme="@style/Theme.MedNote.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
